test/link/section-attributes-mismatch.link
ROM0
	org $10
	"sec"
	org $20
	"secfix"
